@@ -21,8 +21,10 @@
  *
  */
 
+#include "internal.h"
 #include "prpl.h"
 #include "util.h"
+#include "debug.h"
 
 #include "yahoo_friend.h"
 
@@ -32,6 +34,7 @@ static YahooFriend *yahoo_friend_new(void)
 
 	ret = g_new0(YahooFriend, 1);
 	ret->status = YAHOO_STATUS_OFFLINE;
+	ret->stealth = YAHOO_STEALTH_DEFAULT;
 
 	return ret;
 }
@@ -133,3 +136,121 @@ void yahoo_friend_free(gpointer p)
 		g_free(f->ip);
 	g_free(f);
 }
+
+void yahoo_process_stealth(GaimConnection *gc, struct yahoo_packet *pkt)
+{
+	GSList *l = pkt->hash;
+	YahooFriend *f;
+	char *who = NULL;
+	int value = 0;
+
+	while (l) {
+		struct yahoo_pair *pair = l->data;
+
+		switch (pair->key) {
+			case 7:
+				who = pair->value;
+				break;
+			case 31:
+				value = strtol(pair->value, NULL, 10);
+				break;
+		}
+
+		l = l->next;
+	}
+
+	if (value != 1 && value != 2) {
+		gaim_debug_error("yahoo", "Received unknown value for stealth key: %d\n", value);
+		return;
+	}
+
+	g_return_if_fail(who != NULL);
+
+	f = yahoo_friend_find(gc, who);
+	if (!f)
+		return;
+
+	if (pkt->service == YAHOO_SERVICE_STEALTH_PERM) {
+		gaim_debug_info("yahoo", "Setting permanent stealth for %s to %d.\n", who, (value == 1));
+		/* If setting from perm offline to online when in invisible status,
+		 * this has already been taken care of (when the temp status changed) */
+		if (value == 2 && f->stealth == YAHOO_STEALTH_ONLINE) {
+		} else {
+			if (value == 1) /* Setting Perm offline */
+				f->stealth = YAHOO_STEALTH_PERM_OFFLINE;
+			else
+				f->stealth = YAHOO_STEALTH_DEFAULT;
+		}
+	} else {
+		gaim_debug_info("yahoo", "Setting session stealth for %s to %d.\n", who, (value == 1));
+		if (value == 1)
+			f->stealth = YAHOO_STEALTH_ONLINE;
+		else
+			f->stealth = YAHOO_STEALTH_DEFAULT;
+	}
+}
+
+void yahoo_friend_update_stealth(GaimConnection *gc, const char *name,
+		YahooStealthVisibility stealth)
+{
+	struct yahoo_data *yd = gc->proto_data;
+	struct yahoo_packet *pkt = NULL;
+	YahooFriend *f;
+
+	if (!yd->logged_in)
+		return;
+
+	f = yahoo_friend_find(gc, name);
+	if (!f)
+		return;
+
+	/* No need to change the value if it is already correct */
+	if (f->stealth == stealth) {
+		gaim_debug_info("yahoo", "Not setting stealth because there are no changes.\n");
+		return;
+	}
+
+	if (stealth == YAHOO_STEALTH_PERM_OFFLINE) {
+		pkt = yahoo_packet_new(YAHOO_SERVICE_STEALTH_PERM,
+				YAHOO_STATUS_AVAILABLE, yd->session_id);
+
+		yahoo_packet_hash(pkt, "ssss",
+				1, gaim_connection_get_display_name(gc),
+				31, "1", 13, "2", 7, name);
+	} else if (stealth == YAHOO_STEALTH_DEFAULT) {
+		if (f->stealth == YAHOO_STEALTH_PERM_OFFLINE) {
+			pkt = yahoo_packet_new(YAHOO_SERVICE_STEALTH_PERM,
+					YAHOO_STATUS_AVAILABLE, yd->session_id);
+
+			yahoo_packet_hash(pkt, "ssss",
+					1, gaim_connection_get_display_name(gc),
+					31, "2", 13, "2", 7, name);
+		} else if (yd->current_status == YAHOO_STATUS_INVISIBLE) {
+			pkt = yahoo_packet_new(YAHOO_SERVICE_STEALTH_SESSION,
+					YAHOO_STATUS_AVAILABLE, yd->session_id);
+			yahoo_packet_hash(pkt, "ssss",
+				1, gaim_connection_get_display_name(gc),
+				31, "2", 13, "1", 7, name);
+		}
+	} else if (stealth == YAHOO_STEALTH_ONLINE) {
+		if (f->stealth == YAHOO_STEALTH_PERM_OFFLINE) {
+			pkt = yahoo_packet_new(YAHOO_SERVICE_STEALTH_PERM,
+					YAHOO_STATUS_AVAILABLE, yd->session_id);
+			yahoo_packet_hash(pkt, "ssss",
+					1, gaim_connection_get_display_name(gc),
+					31, "2", 13, "2", 7, name);
+			yahoo_packet_send_and_free(pkt, yd);
+		}
+
+
+		pkt = yahoo_packet_new(YAHOO_SERVICE_STEALTH_SESSION,
+				YAHOO_STATUS_AVAILABLE, yd->session_id);
+		yahoo_packet_hash(pkt, "ssss",
+				1, gaim_connection_get_display_name(gc),
+				31, "1", 13, "1", 7, name);
+	}
+
+	if (pkt)
+		yahoo_packet_send_and_free(pkt, yd);
+}
+
